1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (edit_options, describe): New function.
	(create_widget): Modify the menu.

	* TODO: Modified.

	* NEWS: Modified.

	* main.cc (main): Save and restore options.

	* configure.in: Add checks for <gnome-xml/parser.h> and -lxml,
	-lz.

	* Makefile.am (rglclock_SOURCES): Add profile.cc.
	(noinst_HEADERS): Add profile.h.

	* profile.h: New file.

	* profile.cc: New file.

	* main.cc (create_widget): New function.
	(main): Use create_widget.
	(main): Make the glclock object block-local.

1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (main): Store glc as callback data for menu items.
	(handle_delete_event): Removed.
	(main): Make toplevel function-local.

	* autowidget.h (class auto_widget): Removed.  Also remove all uses
	by replacing with GtkObject_ptr.

	* main.cc (main): Use GtkObject_ptr.

	* autowidget.h (template class GtkObject_ptr): New class template.

	* main.cc (main): Make a vbox and a menu bar.

	* gtkrc: Removed.

	* Makefile.am (pkgdata_DATA): Removed.
	(EXTRA_DIST): Remove gtkrc.

	* glclock.h (class glclock): Update members.
	(class glclock): Remove member t.

	* glclock.cc (glclock): Remove setting of t.
	(update): Keep the current time in a function-local variable.
	(update) [!HAVE_GETTIMEOFDAY]: Use timeout_rate.
	(handle_destroy_event, handle_configure_event, finish_realize):
	Removed.
	(update) [HAVE_GETTIMEOFDAY]: Add comments.
	(glclock): Disable the unimplemented menu item.

	* main.cc (main): Use create_widget.

	* glclock.h: Add comments.
	(class glclock): Update member functions.
	(class glclock): Add data members: widgets and menu_parent.
	(class glclock): Remove member drawing_area.

	* glclock.cc: Include <algorithm>.
	(create_widget, remove_widget): New function.
	(operator GtkWidget *): Removed.
	(~glclock): Disconnect all signals for each widget.
	(~glclock): Unref context.
	(glclock): Remove the drawing area creation.